Active keyframe changes with active FCurve on deselect of keyframe #81890

Closed
opened 2020-10-20 16:53:38 +02:00 by Sybren A. Stüvel · 5 comments

System Information
Operating system: Linux-5.4.0-51-generic-x86_64-with-debian-bullseye-sid 64 Bits
Graphics card: GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 450.80.02

Blender Version
Broken: version: 2.91.0 Alpha, branch: master (modified), commit date: 2020-10-20 13:26, hash: 8319279fdb
Worked: never, new feature introduced in 983ad4210b

Short description of error
In the graph editor, deselecting a keyframe activates that keyframe's curve. As a result, that curve's active keyframe becomes the overall active keyframe for that editor.

Exact steps for others to reproduce the error

  • Open the attached blend file
  • The last X-rotation keyframe is active
  • Deselect the middle Y-rotation keyframe, by shift-clicking on it

Expected behaviour: the active key remains the same.

Observed behaviour: the last keyframe of the Y-rotation curve is now active.

#81890-active-keyframe-on-deselect.blend

Possible solutions

I see two solutions here:

  • Keep track of the active keyframe separate from the active FCurve. That would even allow for different active keyframes per graph editor (not sure if that's desirable though).
  • On de-selecting a keyframe, don't change what is active FCurve. That way both the active FCurve and the active keyframe are determined by selection only, and should stay in sync.
**System Information** Operating system: Linux-5.4.0-51-generic-x86_64-with-debian-bullseye-sid 64 Bits Graphics card: GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 450.80.02 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master (modified), commit date: 2020-10-20 13:26, hash: `8319279fdb` Worked: never, new feature introduced in 983ad4210b **Short description of error** In the graph editor, deselecting a keyframe activates that keyframe's curve. As a result, that curve's active keyframe becomes the overall active keyframe for that editor. **Exact steps for others to reproduce the error** - Open the attached blend file - The last X-rotation keyframe is active - Deselect the middle Y-rotation keyframe, by shift-clicking on it Expected behaviour: the active key remains the same. Observed behaviour: the last keyframe of the Y-rotation curve is now active. [#81890-active-keyframe-on-deselect.blend](https://archive.blender.org/developer/F9023013/T81890-active-keyframe-on-deselect.blend) **Possible solutions** I see two solutions here: - Keep track of the active keyframe separate from the active FCurve. That would even allow for different active keyframes per graph editor (not sure if that's desirable though). - On de-selecting a keyframe, don't change what is active FCurve. That way both the active FCurve and the active keyframe are determined by selection only, and should stay in sync.
Author
Member

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by d62309a20e

This issue was referenced by d62309a20e4855cc0feaf5aa78046d5dc8be638f

This issue was referenced by 83ddd658a6

This issue was referenced by 83ddd658a685a96f88ce91cc82fa1768d69bf562
Author
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sybren A. Stüvel self-assigned this 2020-10-23 17:48:11 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#81890
No description provided.